-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.11.0 Beta 1
-
macOS 10.12 (Xcode 9.2),
fedora
Windows 7 32-bit mingw5.3.0
-
e4e87a2ece1e0c9901514fea094f31863b64b570
Assistant crashes when doing search.
Steps to reproduce:
- Install 5.11 beta1 macOS binary
- Press 'Search' tab
- Search e.g. for QDialog
Expected result:
Search completes
Actual result:
Assistant crashes with:
Thread 0:: Dispatch queue: com.apple.main-thread 0 libsystem_kernel.dylib 0x00007fff5a860cee __psynch_cvwait + 10 1 libsystem_pthread.dylib 0x00007fff5a99d662 _pthread_cond_wait + 732 2 org.qt-project.QtCore 0x000000010f614a2b QWaitConditionPrivate::wait(unsigned long) + 75 3 org.qt-project.QtCore 0x000000010f6149c2 QWaitCondition::wait(QMutex*, unsigned long) + 162 4 org.qt-project.QtCore 0x000000010f61416e QThread::wait(unsigned long) + 110 5 org.qt-project.QtHelp 0x000000010eb0f7d3 fulltextsearch::QHelpSearchIndexReader::search(QString const&, QString const&, QString const&) + 35 6 org.qt-project.QtHelp 0x000000010eb04655 QHelpSearchEnginePrivate::search(QString const&) + 821 7 org.qt-project.assistant 0x000000010e9e9391 0x10e9b1000 + 230289 8 org.qt-project.QtCore 0x000000010f7f5e1b QMetaObject::activate(QObject*, int, int, void**) + 2347 9 org.qt-project.QtCore 0x000000010f7f5e1b QMetaObject::activate(QObject*, int, int, void**) + 2347 10 org.qt-project.QtWidgets 0x000000010ec41fbf QAbstractButtonPrivate::emitClicked() + 111 11 org.qt-project.QtWidgets 0x000000010ec41e52 QAbstractButtonPrivate::click() + 226 12 org.qt-project.QtWidgets 0x000000010ec430bf QAbstractButton::mouseReleaseEvent(QMouseEvent*) + 271 13 org.qt-project.QtWidgets 0x000000010eb822b0 QWidget::event(QEvent*) + 496 14 org.qt-project.QtWidgets 0x000000010ec42c21 QAbstractButton::event(QEvent*) + 145 15 org.qt-project.QtWidgets 0x000000010eb48152 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 306 16 org.qt-project.QtWidgets 0x000000010eb4aeed QApplication::notify(QObject*, QEvent*) + 7165 17 org.qt-project.QtCore 0x000000010f7c4d6f QCoreApplication::notifyInternal2(QObject*, QEvent*) + 159 18 org.qt-project.QtWidgets 0x000000010eb48a80 QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) + 896 19 org.qt-project.QtWidgets 0x000000010eba23f0 QWidgetWindow::handleMouseEvent(QMouseEvent*) + 1744 20 org.qt-project.QtWidgets 0x000000010eba10e0 QWidgetWindow::event(QEvent*) + 224 21 org.qt-project.QtWidgets 0x000000010eb48152 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 306 22 org.qt-project.QtWidgets 0x000000010eb4946f QApplication::notify(QObject*, QEvent*) + 383 23 org.qt-project.QtCore 0x000000010f7c4d6f QCoreApplication::notifyInternal2(QObject*, QEvent*) + 159 24 org.qt-project.QtGui 0x000000010f105209 QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) + 3145 25 org.qt-project.QtGui 0x000000010f0eb5eb QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 155 26 libqcocoa.dylib 0x0000000111816091 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 33 27 com.apple.CoreFoundation 0x00007fff32e2c5a1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 28 com.apple.CoreFoundation 0x00007fff32ee635c __CFRunLoopDoSource0 + 108 29 com.apple.CoreFoundation 0x00007fff32e0f040 __CFRunLoopDoSources0 + 208 30 com.apple.CoreFoundation 0x00007fff32e0e4bd __CFRunLoopRun + 1293 31 com.apple.CoreFoundation 0x00007fff32e0dd23 CFRunLoopRunSpecific + 483 32 com.apple.HIToolbox 0x00007fff32125e26 RunCurrentEventLoopInMode + 286 33 com.apple.HIToolbox 0x00007fff32125a9f ReceiveNextEventCommon + 366 34 com.apple.HIToolbox 0x00007fff32125914 _BlockUntilNextEventMatchingListInModeWithFilter + 64 35 com.apple.AppKit 0x00007fff303f0f5f _DPSNextEvent + 2085 36 com.apple.AppKit 0x00007fff30b86b4c -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 3044 37 com.apple.AppKit 0x00007fff303e5d6d -[NSApplication run] + 764 38 libqcocoa.dylib 0x0000000111814e8d QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2397 39 org.qt-project.QtCore 0x000000010f7c08c2 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 40 org.qt-project.QtCore 0x000000010f7c5482 QCoreApplication::exec() + 402 41 org.qt-project.assistant 0x000000010e9d3e46 0x10e9b1000 + 142918 42 libdyld.dylib 0x00007fff5a711115 start + 1
- duplicates
-
QTCREATORBUG-19930 Qt creator crash on Arch Linux when I "search" a keyword on documentation
-
- Closed
-
For Gerrit Dashboard: QTBUG-66816 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
222460,2 | sqlite: Prevent a crash when sqlite does not detect any parameters | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |